created image dir and updated image source urls

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </p>
 
     <!-- "First Section" -->
-    <video autoplay muted loop src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4"></video>
+    <video autoplay muted loop src="./resources/images/excursion.mp4"></video>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <p>
@@ -23,7 +23,7 @@
 
     <!-- "Sign off" -->
     <p>
-        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="device icon"/>
+        <img src=".resources/images/phone.png" alt="device icon"/>
     <h2>Coming Soon for iPhone and Android</h2>
     <p>
         <a class="cta" href="#">Download Excursion (Coming soon!)</a>
