modified html file ls clear :

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- "Sign off" -->
     <p>
-        <img src=".resources/images/phone.png" alt="device icon"/>
+        <img src="./resources/images/phone.png" alt="device icon"/>
     <h2>Coming Soon for iPhone and Android</h2>
     <p>
         <a class="cta" href="#">Download Excursion (Coming soon!)</a>
