--- a/index.html
+++ b/index.html
@@ -7,21 +7,25 @@
   </head>
 
   <body>
-    <!-- "Main Section" -->
+
+    <!-- "Landing Section" -->
+
     <h1>Discover hidden places in the world around you</h1>
     <p>
         <a class="cta" href="#">Download Excursion (Coming soon!)</a>
     </p>
-
-    <!-- "First Section" -->
     <video autoplay muted loop src="./resources/images/excursion.mp4"></video>
+
+    <!-- "About Section" -->
+
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <p>
-        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="campsite"/>
+        <img src="./resources/images/camp.jpg" alt="campsite"/>
     </p>
 
     <!-- "Sign off" -->
+
     <p>
         <img src="./resources/images/phone.png" alt="device icon"/>
     <h2>Coming Soon for iPhone and Android</h2>
@@ -30,7 +34,7 @@
 
     <!-- "Footer" -->
     <div class="footer">
-        <p>© Excursion</p>
+        <p>&copy; Excursion</p>
     </div>
   </body>
 </html>
